# mondradiko

./: .gitmodules  BUILDING.md  CMakeLists.txt  c++20-polyfills.h  vcpkg.json  vcpkg.sh
.github/workflows/: vcpkg_test.yml
assets/loading/: AssetBundle.cc
assets/saving/: AssetBundleBuilder.h
bindings/: CMakeLists.txt
bundler/: CMakeLists.txt
client/: CMakeLists.txt
cmake/: FindMondradikoDependency.cmake  FindPackageHelper.cmake  SPIR-V.cmake  api_bindings.cmake  flatc.cmake  msvc-disable-warnings.cmake  optional-vcpkg-setup.cmake  vcpkg.cmake
cmake/vcpkg-ports/flatbuffers/: portfile.cmake  readme.md
cmake/vcpkg-ports/gamenetworkingsockets/: portfile.cmake  readme.md
cmake/vcpkg-ports/mondradiko-deps/: vcpkg.json
cmake/vcpkg-ports/vulkan/: CONTROL
cmake/vcpkg-ports/vulkan-c-sdk/: CONTROL
cmake/vcpkg-ports/vulkan-headers/: portfile.cmake
cmake/vcpkg-ports/vulkan-loader/: CONTROL
cmake/vcpkg-ports/vulkan-sdk/: CONTROL
cmake/vcpkg-ports/vulkan-sdk-minimal/: CONTROL
cmake/vcpkg-ports/wasmtime/: CMakeLists.txt  CONTROL  portfile.cmake
core/: CMakeLists.txt
core/assets/: MeshAsset.h
core/displays/: OpenXrDisplay.cc  OpenXrViewport.cc  SdlDisplay.cc  SdlViewport.cc  Viewport.cc
core/gpu/: GpuBuffer.cc  GpuDescriptorPool.cc  GpuDescriptorSet.cc  GpuDescriptorSetLayout.cc  GpuImage.cc  GpuInstance.cc  GpuPipeline.cc  GpuShader.cc
core/renderer/: MeshPass.cc  OverlayPass.cc  OverlayPass.h  Renderer.cc
core/ui/: GlyphLoader.cc  GlyphLoader.h  UserInterface.cc
lib/: CMakeLists.txt
log/: log.cc
server/: CMakeLists.txt  server_main.cc
types/: CMakeLists.txt
